Update @ModCommand javadocs